@@ -155,6 +155,20 @@ can be found <a href="http://gstreamer.freedesktop.org/documentation/splitup.htm
 require Windows DLLs. Check the <a href="http://xinehq.de/index.php/faq#QUICKTIME">FAQ</a> on
 xine-lib's website. That should sort most of you out.</p>
 
+<a name="dvb"></a>
+<h1>DVB support</h1>
+<p>Using Totem, you can watch TV on over-the-air and satellite digital television. You'll need a DVB-T or DVB-S card supported by Linux, and a channels.conf file containing the channel tuning information.</p>
+
+<h2>GStreamer</h2>
+<p>You will need gst-plugins-bad 0.10.6, as well as Fluendo's MPEG demuxer to have playback working. The channels.conf file should be named <tt>~/.gstreamer-0.10/dvb-channels.conf</tt>.</p>
+
+<h2>xine-lib</h2>
+<p>The channels.conf file should be placed in <tt>~/.xine/</tt>.
+
+<h2>Generating the channels.conf</h2>
+<p><a href="http://bugzilla.gnome.org/show_bug.cgi?id=515759">Work is on-going to have a scanner interface in Totem</a>, so that the out-of-the-box experience is better, but you will have to use another application to generate the channels listing.</p>
+<p>We recommend you use <a href="http://www.edafe.org/vdr/wscan.html">w_scan</a> as it doesn't require any initial scanning data to scan for channels.</p>
+
 <a name="faq"></a>
 <h1>Frequently Asked Questions</h1>
 
