@@ -1,3 +1,7 @@
+2008-02-11  Bastien Nocera  <hadess@hadess.net>
+
+	* index.html: Add section about DVB playback
+
 2008-02-07  Bastien Nocera  <hadess@hadess.net>
 
 	* index.html: Update web page to mention which
